--- a/Code/Helpers/embeddable_module.swift.liquid
+++ b/Code/Helpers/embeddable_module.swift.liquid
@@ -3,5 +3,5 @@
 import UIKit
 
 typealias {{ prefix }}{{ module_info.name }}EmbeddableModuleInput = SomeEmbeddableModuleInput // TODO: Place your code here
-{% if custom_parameters.embeddable_extended_configure %}typealias {{ prefix }}{{ module_info.name }}EmbeddableModuleInputConfig = SomeEmbeddableModuleInputConfig // TODO{% endif %}
+{% if custom_parameters.embeddable_extended_configure %}typealias {{ prefix }}{{ module_info.name }}EmbeddableModuleConfig = SomeEmbeddableModuleConfig // TODO{% endif %}
 typealias {{ prefix }}{{ module_info.name }}EmbeddableModuleConfigurator = SomeEmbeddableModuleConfigurator // TODO: Place your code here
