--- a/Code/Helpers/moduleinputconfig.alert.swift.liquid
+++ b/Code/Helpers/moduleinputconfig.alert.swift.liquid
@@ -1,6 +1,6 @@
 {% include 'header' %}
 
-struct {{ prefix }}{{ module_info.name }}ModuleInputConfig {
+struct {{ prefix }}{{ module_info.name }}ModuleConfig {
     let title: String?
     let message: String?
     // TODO: Place your code here
