--- a/Code/Interactor/interactor_input.tabbar.swift.liquid
+++ b/Code/Interactor/interactor_input.tabbar.swift.liquid
@@ -2,11 +2,11 @@
 
 import Foundation
 
-protocol {{ prefix }}{{ module_info.name }}InteractorInput: class {
+protocol {{ prefix }}{{ module_info.name }}InteractorInput: AnyObject {
     {% if custom_parameters.extended_configure %}func configure(with {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
-                                                                    environment: {{ prefix }}{{ module_info.name }}ModuleInputEnvironment)
+                                                                    config: {{ prefix }}{{ module_info.name }}InteractorConfig)
                                                                     {%- else -%}
-                                                                    config: {{ prefix }}{{ module_info.name }}ModuleInputConfig)
+                                                                    config: {{ prefix }}{{ module_info.name }}ModuleConfig)
                                                                     {%- endif -%}{% else %}func configure(){% endif %}
     func deinitialize()
     var currentTab: {{ prefix }}{{ module_info.name }}ModuleTab { get set }
