--- a/Code/Presenter/module_output.mcflurry.swift.liquid
+++ b/Code/Presenter/module_output.mcflurry.swift.liquid
@@ -4,13 +4,9 @@ import {% if custom_parameters.mcflurry_swift == 'true' %}ViperMcFlurryX_Swift{%
 
 {% if custom_parameters.mcflurry_swift != "true" %}@objc{% endif %}
 protocol {{ prefix }}{{ module_info.name }}ModuleOutput: {% if custom_parameters.mcflurry_swift != "true" %}Rambler{% endif %}ViperModuleOutput {
-    func {{ module_info.name[0] | downcase -}}
-    {%- assign myvariable_length = module_info.name | size | minus: 1 -%} 
-    {{- module_info.name | slice: 1, myvariable_length }}ModuleDidDeallocate(_ moduleInput: {{ prefix }}{{ module_info.name }}ModuleInput)
+    func {{ module_info.name | slice: 0, 1 | downcase }}{{ module_info.name | slice: 1 }}ModuleDidDeallocate(_ moduleInput: {{ prefix }}{{ module_info.name }}ModuleInput)
 }
 
 extension {{ prefix }}{{ module_info.name }}ModuleOutput {
-    func {{ module_info.name[0] | downcase -}}
-    {%- assign myvariable_length = module_info.name | size | minus: 1 -%} 
-    {{- module_info.name | slice: 1, myvariable_length }}ModuleDidDeallocate(_ moduleInput: {{ prefix }}{{ module_info.name }}ModuleInput) {}
+    func {{ module_info.name | slice: 0, 1 | downcase }}{{ module_info.name | slice: 1 }}ModuleDidDeallocate(_ moduleInput: {{ prefix }}{{ module_info.name }}ModuleInput) {}
 }
