--- a/Code/Service/onewaysynchronizer.swift.liquid
+++ b/Code/Service/onewaysynchronizer.swift.liquid
@@ -1,5 +1,5 @@
 {% include 'header' %}
 
-protocol {{ prefix }}{{ module_info.name }}Service: class {
+protocol {{ prefix }}{{ module_info.name }}Service: AnyObject {
     // TODO
 }
