--- a/Code/Configurator/configurator.uikitplus.swift.liquid
+++ b/Code/Configurator/configurator.uikitplus.swift.liquid
@@ -10,13 +10,13 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator {
 class {{ prefix }}{{ module_info.name }}ModuleConfigurator: {% if custom_parameters.mcflurry_swift != "true" %}NSObject,{% endif %} {% if custom_parameters.mcflurry_swift != "true" %}Rambler{% endif %}ViperModuleFactory{% if custom_parameters.mcflurry_swift != "true" %}Protocol{% endif %} {
 {% endif %}
 
-    func configureModuleForViewInput<UIViewController>(viewInput: UIViewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig{% endif %}) {
+    func configureModuleForViewInput<UIViewController>(viewInput: UIViewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleConfig{% endif %}) {
         if let viewController = viewInput as? {{ prefix }}{{ module_info.name }}ViewController {
-            configure(viewController: viewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with: config{% endif -%})
+            configure(viewController: viewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with: config{% endif %})
         }
     }
 
-    private func configure(viewController: {{ prefix }}{{ module_info.name }}ViewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig{% endif %}) {
+    private func configure(viewController: {{ prefix }}{{ module_info.name }}ViewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleConfig{% endif %}) {
 
         guard viewController.output == nil else { // prevent double configuration
             return
@@ -41,19 +41,18 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator: {% if custom_paramet
         viewController.onWillDeallocate {
             presenter.willDeinit()
         }
-
-        {% if custom_parameters.extended_configurator_create %}
+        {% if custom_parameters.extended_configurator_create -%}
         presenter.configure({% if custom_parameters.extended_configure %}with: config{% endif %})
-        {% endif %}
+        {%- endif %}
     }
 
-    func create({% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig{% endif %}) -> UIViewController {
+    func create({% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}with config: {{ prefix }}{{ module_info.name }}ModuleConfig{% endif %}) -> UIViewController {
         let viewController = {{ prefix }}{{ module_info.name }}ViewController()
-        {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
+        {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure -%}
         configureModuleForViewInput(viewInput: viewController, with: config)
-        {% else %}
+        {%- else -%}
         configureModuleForViewInput(viewInput: viewController)
-        {% endif %}
+        {%- endif %}
         return viewController
     }
 
