--- a/Code/Interactor/interactor_input.cachetracker_array.swift.liquid
+++ b/Code/Interactor/interactor_input.cachetracker_array.swift.liquid
@@ -3,12 +3,12 @@
 import Foundation
 import CacheTracker
 
-protocol {{ prefix }}{{ module_info.name }}InteractorInput: class {
+protocol {{ prefix }}{{ module_info.name }}InteractorInput: AnyObject {
 
     {% if custom_parameters.extended_configure %}func configure(with {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
-                                                                    environment: {{ prefix }}{{ module_info.name }}ModuleInputEnvironment)
+                                                                    config: {{ prefix }}{{ module_info.name }}InteractorConfig)
                                                                     {%- else -%}
-                                                                    config: {{ prefix }}{{ module_info.name }}ModuleInputConfig)
+                                                                    config: {{ prefix }}{{ module_info.name }}ModuleConfig)
                                                                     {%- endif -%}{% else %}func configure(){% endif %}
     func deinitialize()
     func isDeliveringModelsListChanges() -> Bool
