--- a/Code/Interactor/interactor_output.swift.liquid
+++ b/Code/Interactor/interactor_output.swift.liquid
@@ -2,6 +2,6 @@
 
 import Foundation
 
-protocol {{ prefix }}{{ module_info.name }}InteractorOutput: class {
+protocol {{ prefix }}{{ module_info.name }}InteractorOutput: AnyObject {
 
 }
