--- a/Code/Presenter/presenter.mcflurry.alert.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.alert.swift.liquid
@@ -22,9 +22,9 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
     // MARK: - Vars
 
     private var {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
-                                                            environment: {{ prefix }}{{ module_info.name }}ModuleInputParameters!
+                                                            config: {{ prefix }}{{ module_info.name }}PresenterConfig!
                                                             {%- else -%}
-                                                            config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!
+                                                            config: {{ prefix }}{{ module_info.name }}ModuleConfig!
                                                             {%- endif %}
     private var dismissed = false
 
@@ -36,9 +36,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
             // TODO: Place your code here
         }
         state = .deinitialized
-        output?.{{ module_info.name[0] | downcase -}}
-                {%- assign myvariable_length = module_info.name | size | minus: 1 -%}
-                {{- module_info.name | slice: 1, myvariable_length }}ModuleDidDeallocate(self)
+        output?.{{ module_info.name | slice: 0, 1 | downcase }}{{ module_info.name | slice: 1 }}ModuleDidDeallocate(self)
     }
 
     // MARK: - {% if custom_parameters.mcflurry_swift != "true" %}Rambler{% endif %}ViperModuleInput
@@ -69,7 +67,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
 
     // MARK: - {{ prefix }}{{module_info.name}}ModuleInput
 
-    func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
+    func configure(with config: {{ prefix }}{{ module_info.name }}ModuleConfig) {
         assert(Thread.isMainThread)
         guard case .initial = state else { fatalError() }
         state = .ready(isViewReady: false)
@@ -78,7 +76,19 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
     }
 
     // MARK: - {{ prefix }}{{ module_info.name }}InteractorOutput
-    // TODO: Place your code here
+
+//    func someInteractorOutputAction() {
+//        guard case .ready = self.state else { return }
+//        // TODO: Place your code here
+//    }
+//
+//    func someInteractorOutputActionWithViewInteraction() {
+//        guard case let .ready(isViewReady) = self.state, isViewReady else { return }
+//        // TODO: Place your code here
+//        view.setSomeValue()
+//    }
+
+    // TODO: Place your code here    
 
     // MARK: - Helpers
     // TODO: Place your code here
