--- a/Code/Presenter/presenter.swift.liquid
+++ b/Code/Presenter/presenter.swift.liquid
@@ -21,9 +21,9 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
     // MARK: - Vars
 
     {% if custom_parameters.extended_configure %}private var {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
-                                                            environment: {{ prefix }}{{ module_info.name }}ModuleInputParameters!
+                                                            config: {{ prefix }}{{ module_info.name }}PresenterConfig!
                                                             {%- else -%}
-                                                            config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!
+                                                            config: {{ prefix }}{{ module_info.name }}ModuleConfig!
                                                             {%- endif -%}{%- endif %}
 
     // MARK: - Life cycle
@@ -41,21 +41,20 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
     func viewIsReady() {
         guard case let .ready(isViewReady) = self.state, !isViewReady else { fatalError() }
         state = .ready(isViewReady: true)
-
         view.configure(with: .init())
         // TODO: Place your code here
     }
 
     // MARK: - {{ prefix }}{{module_info.name}}ModuleInput
 
-    {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {% else %}func configure() {% endif %}{
+    {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleConfig) {% else %}func configure() {% endif %}{
         assert(Thread.isMainThread)
         guard case .initial = state else { fatalError() }
         state = .ready(isViewReady: false)
-        {% if custom_parameters.extended_configure %}
+        {% if custom_parameters.extended_configure -%}
         self.config = config
         interactor.configure(with: config)
-        {% else %}interactor.configure(){% endif %}
+        {%- else -%}interactor.configure(){%- endif %}
     }
 
     func setOutput(_ output: {{ prefix }}{{ module_info.name }}ModuleOutput) {
@@ -63,7 +62,19 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
     }
 
     // MARK: - {{ prefix }}{{ module_info.name }}InteractorOutput
-    // TODO: Place your code here
+    
+//    func someInteractorOutputAction() {
+//        guard case .ready = self.state else { return }
+//        // TODO: Place your code here
+//    }
+//
+//    func someInteractorOutputActionWithViewInteraction() {
+//        guard case let .ready(isViewReady) = self.state, isViewReady else { return }
+//        // TODO: Place your code here
+//        view.setSomeValue()
+//    }
+
+    // TODO: Place your code here    
 
     // MARK: - Helpers
     // TODO: Place your code here
