--- a/Code/Router/router_input.mcflurry.complex.swift.liquid
+++ b/Code/Router/router_input.mcflurry.complex.swift.liquid
@@ -2,7 +2,7 @@
 
 import Foundation
 
-protocol {{ prefix }}{{ module_info.name }}RouterInput: class {
+protocol {{ prefix }}{{ module_info.name }}RouterInput: AnyObject {
 
     func createEmbeddableModule(with model: {{ prefix }}{{ module_info.name }}ModuleEntityModel, lazyAllocation: Bool) -> {{ prefix }}{{ module_info.name }}EmbeddableEmbedBlock
 
