--- a/Code/Router/router_input.mcflurry.swift.liquid
+++ b/Code/Router/router_input.mcflurry.swift.liquid
@@ -2,7 +2,7 @@
 
 import Foundation
 
-protocol {{ prefix }}{{ module_info.name }}RouterInput: class {
+protocol {{ prefix }}{{ module_info.name }}RouterInput: AnyObject {
 
     /*  // Example
     func dismiss()
