--- a/Code/View/view_input.alert.swift.liquid
+++ b/Code/View/view_input.alert.swift.liquid
@@ -1,6 +1,6 @@
 {% include 'header' %}
 
-protocol {{ prefix }}{{ module_info.name }}ViewInput: class {
+protocol {{ prefix }}{{ module_info.name }}ViewInput: AnyObject {
 
     func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme)
     func setAlertTitle(_ title: String?)
