--- a/Code/View/view_output.tabbar.swift.liquid
+++ b/Code/View/view_output.tabbar.swift.liquid
@@ -1,5 +1,5 @@
 {% include 'header' %}
 
-protocol {{ prefix }}{{ module_info.name }}ViewOutput: class {
+protocol {{ prefix }}{{ module_info.name }}ViewOutput: AnyObject {
 
 }
