--- a/Tests/Configurator/configurator_tests.mcflurry.alert.swift.liquid
+++ b/Tests/Configurator/configurator_tests.mcflurry.alert.swift.liquid
@@ -20,15 +20,15 @@ class {{ prefix }}{{ module_info.name }}ModuleConfiguratorTests: XCTestCase {
         let viewController = {{ prefix }}{{ module_info.name }}ViewControllerMock()
         let configurator = {{ prefix }}{{ module_info.name }}ModuleConfigurator()
         {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
-        let config = {{ prefix }}{{ module_info.name }}ModuleInputConfig(title: "Title", message: "Message")
+        let config = {{ prefix }}{{ module_info.name }}ModuleConfig(title: "Title", message: "Message")
         {% endif %}
 
         //when
-        {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
+        {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure -%}
         configurator.configureModuleForViewInput(viewInput: viewController, with: config)
-        {% else %}
+        {%- else -%}
         configurator.configureModuleForViewInput(viewInput: viewController)
-        {% endif %}
+        {%- endif %}
 
         //then
         XCTAssertNotNil(viewController.output, "{{ prefix }}{{ module_info.name }}ViewController is nil after configuration")
