--- a/Tests/Presenter/presenter_tests.cachetracker.swift.liquid
+++ b/Tests/Presenter/presenter_tests.cachetracker.swift.liquid
@@ -23,7 +23,7 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
         // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
 
-        {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
+        {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleConfig) {
         }{% else %}func configure() {
         }{% endif %}
 
